// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KanbanBoard Component > Matches snapshot 1`] = `
<div>
  <div
    class="grid grid-cols-3 gap-6 h-full"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="mb-4"
      >
        <div
          class="rounded-lg px-4 py-3 bg-slate-50 border border-slate-200"
        >
          <h3
            class="text-slate-900"
          >
            To Do
          </h3>
          <p
            class="text-sm text-slate-600"
          >
            2
             tasks
          </p>
        </div>
      </div>
      <div
        class="flex-1 space-y-3 overflow-y-auto pr-1"
      >
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              To Do Task 1
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            First todo task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Backend
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-red-100 border-red-200 text-red-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-red-700"
              />
              High Priority
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                14/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              To Do Task 2
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            Second todo task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Frontend
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-orange-100 border-orange-200 text-orange-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-orange-700"
              />
              Medium
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                15/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="mb-4"
      >
        <div
          class="rounded-lg px-4 py-3 bg-blue-50 border border-slate-200"
        >
          <h3
            class="text-slate-900"
          >
            In Progress
          </h3>
          <p
            class="text-sm text-slate-600"
          >
            2
             tasks
          </p>
        </div>
      </div>
      <div
        class="flex-1 space-y-3 overflow-y-auto pr-1"
      >
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              In Progress Task 1
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            First in-progress task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Backend
            </span>
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Security
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-red-100 border-red-200 text-red-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-red-700"
              />
              High Priority
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                14/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              In Progress Task 2
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            Second in-progress task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              UI/UX
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-blue-100 border-blue-200 text-blue-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-blue-700"
              />
              Low
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                19/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="mb-4"
      >
        <div
          class="rounded-lg px-4 py-3 bg-green-50 border border-slate-200"
        >
          <h3
            class="text-slate-900"
          >
            Done
          </h3>
          <p
            class="text-sm text-slate-600"
          >
            2
             tasks
          </p>
        </div>
      </div>
      <div
        class="flex-1 space-y-3 overflow-y-auto pr-1"
      >
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              Done Task 1
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            First done task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Database
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-red-100 border-red-200 text-red-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-red-700"
              />
              High Priority
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                9/3/2026
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              Done Task 2
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            Second done task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              DevOps
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-orange-100 border-orange-200 text-orange-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-orange-700"
              />
              Medium
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                7/3/2026
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KanbanBoard Component > Matches snapshot with assignees 1`] = `
<div>
  <div
    class="grid grid-cols-3 gap-6 h-full"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="mb-4"
      >
        <div
          class="rounded-lg px-4 py-3 bg-slate-50 border border-slate-200"
        >
          <h3
            class="text-slate-900"
          >
            To Do
          </h3>
          <p
            class="text-sm text-slate-600"
          >
            2
             tasks
          </p>
        </div>
      </div>
      <div
        class="flex-1 space-y-3 overflow-y-auto pr-1"
      >
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              To Do Task 1
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            First todo task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Backend
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-red-100 border-red-200 text-red-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-red-700"
              />
              High Priority
            </div>
            <div
              class="flex items-center gap-2 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-user w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span>
                Sarah Chen
              </span>
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                14/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              To Do Task 2
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            Second todo task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Frontend
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-orange-100 border-orange-200 text-orange-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-orange-700"
              />
              Medium
            </div>
            <div
              class="flex items-center gap-2 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-user w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span>
                Marcus Johnson
              </span>
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                15/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="mb-4"
      >
        <div
          class="rounded-lg px-4 py-3 bg-blue-50 border border-slate-200"
        >
          <h3
            class="text-slate-900"
          >
            In Progress
          </h3>
          <p
            class="text-sm text-slate-600"
          >
            2
             tasks
          </p>
        </div>
      </div>
      <div
        class="flex-1 space-y-3 overflow-y-auto pr-1"
      >
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              In Progress Task 1
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            First in-progress task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Backend
            </span>
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Security
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-red-100 border-red-200 text-red-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-red-700"
              />
              High Priority
            </div>
            <div
              class="flex items-center gap-2 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-user w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span>
                Sarah Chen
              </span>
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                14/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              In Progress Task 2
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            Second in-progress task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              UI/UX
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-blue-100 border-blue-200 text-blue-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-blue-700"
              />
              Low
            </div>
            <div
              class="flex items-center gap-2 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-user w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span>
                Emily Rodriguez
              </span>
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-red-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                19/3/2026
              </span>
              <span
                class="text-red-600"
              >
                (Overdue)
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="mb-4"
      >
        <div
          class="rounded-lg px-4 py-3 bg-green-50 border border-slate-200"
        >
          <h3
            class="text-slate-900"
          >
            Done
          </h3>
          <p
            class="text-sm text-slate-600"
          >
            2
             tasks
          </p>
        </div>
      </div>
      <div
        class="flex-1 space-y-3 overflow-y-auto pr-1"
      >
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              Done Task 1
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            First done task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              Database
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-red-100 border-red-200 text-red-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-red-700"
              />
              High Priority
            </div>
            <div
              class="flex items-center gap-2 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-user w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span>
                Marcus Johnson
              </span>
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                9/3/2026
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white rounded-lg p-4 shadow-sm border border-slate-200 hover:shadow-md transition-all cursor-pointer group"
        >
          <div
            class="flex items-start justify-between mb-3"
          >
            <h4
              class="text-sm text-slate-900 leading-snug pr-2 group-hover:text-primary transition-colors"
            >
              Done Task 2
            </h4>
          </div>
          <p
            class="text-xs text-slate-600 mb-3 line-clamp-2"
          >
            Second done task
          </p>
          <div
            class="flex flex-wrap gap-1.5 mb-3"
          >
            <span
              class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs px-2 py-0.5 bg-slate-100 text-slate-700 border-0"
              data-slot="badge"
            >
              DevOps
            </span>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="inline-flex items-center gap-1.5 px-2.5 py-1 rounded-md border text-xs bg-orange-100 border-orange-200 text-orange-700"
            >
              <div
                class="w-1.5 h-1.5 rounded-full bg-orange-700"
              />
              Medium
            </div>
            <div
              class="flex items-center gap-2 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-user w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
              <span>
                David Kim
              </span>
            </div>
            <div
              class="flex items-center gap-1.5 text-xs text-slate-600"
            >
              <svg
                class="lucide lucide-calendar w-3.5 h-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2v4"
                />
                <path
                  d="M16 2v4"
                />
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="4"
                />
                <path
                  d="M3 10h18"
                />
              </svg>
              <span>
                Due: 
                7/3/2026
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
